--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -1,5 +1,5 @@
 :root {
- --main-background: rgb(241, 253, 255);
+ --main-background: #edf3f4;
  --boundmargin: 0.5rem;
  --elementborder: 0.1rem
 }
@@ -11,6 +11,7 @@
 }
 
 * {
+  font-family: sans-serif;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -19,8 +20,7 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
-  background-color: rgb(215, 250, 255);
+  background-color: #edf3f4
 }
 /*
 body {
