--- a/src/css/sidebar.module.css
+++ b/src/css/sidebar.module.css
@@ -1,16 +1,63 @@
-#wrapper{
-    display: flex;
-    flex-direction: column;
-    
-  background-color: var(--main-background);
+#wrapper {
+  grid-area: f;
+  height: 100%;
+  position: relative;
 }
 
-.sidebar_element{
+#sidebarHead {
+  background-color: var(--main-background);
+  text-align: center;
+  margin-bottom: 0.5rem;
+  height: 2rem;
+  border-bottom: solid 0.1rem rgb(197, 197, 197);
+  padding-top: 0.4rem;
+}
+
+#sidebarBody {
+  position: sticky;
+  top: 2rem;
+}
+
+#draggablesBody{
+  overflow: hidden;
+  top: 2rem;
+  background-color: white;
+  padding-bottom: 1rem;
+  border-radius: 1rem;
+  margin-left: 1rem;
+  border: solid 0.1rem rgb(197, 197, 197);
+}
+.sidebar_element {
   height: 2rem;
   text-align: center;
+  -webkit-user-select: none;
+  -moz-user-select: none;
   user-select: none;
+  margin-bottom: 0.7rem;
+  background-color: var(--main-background);
+  width: 100%;
+  cursor: grab;
+  padding-top: 0.4rem;
 }
+#saveContainer{
+  margin-top: 0.2rem;
+  background-color: white;
+  border-radius: 1rem;
+  margin-left: 1rem;
+  border: solid 0.1rem rgb(197, 197, 197);
+  display: flex;
+  height: 3rem;
+  overflow: hidden;
+}
+.sidebarButton{
+  flex: 1;
+  border: none;
+}
+#saveBtn {
+  border-right: solid 0.1rem rgb(197, 197, 197);
+ }
 
-.sidebar_button{
-  height: 2rem;
+#deleteBtn:hover{
+  background-color: rgb(255, 78, 78);
+  color: white;
 }
