--- a/form-frontend/src/css/LoginForm.css
+++ b/form-frontend/src/css/LoginForm.css
@@ -135,7 +135,7 @@
     width: 15rem;
     border-radius: 1.5rem;
     height: 2.5rem;
-    background-color: rgb(255, 102, 0);  
+    background-color: var(--highlight-background);
     color: aliceblue;
     font-weight: 750;
     border: none;
