--- a/form-frontend/src/css/bottomSidebar.module.css
+++ b/form-frontend/src/css/bottomSidebar.module.css
@@ -3,12 +3,10 @@
     display: none;
     position: sticky;
     bottom: 0;
-    box-shadow: 0rem -0.08rem 0.2rem rgb(176, 176, 176);
     background: var(--main-background);
     z-index: 1;
     height: 3rem;
     min-height: 3rem;
-    padding-right: 1rem;
 }
 
 @media (max-width: 550px) {
@@ -20,8 +18,10 @@
 }
 
 .sidebarButton {
-    flex: 1;
+    flex: 1 1;
     border: none;
+    background-color: var(--highlight-background);
+    color: white;
 }
 
 #sidebarHead {
@@ -29,8 +29,10 @@
     text-align: center;
     margin-bottom: 0.5rem;
     height: 2rem;
-    border-bottom: solid 0.1rem rgb(197, 197, 197);
-    padding-top: 0.4rem;
+    box-shadow: rgba(71, 71, 71, 0.2) 0px 4px 8px 0px;
+    background-color: var(--highlight-background);
+    color: white;
+    padding: 0.4rem;
 }
 
 #sidebarBody {
@@ -51,9 +53,10 @@
     padding-bottom: 1rem;
     border-radius: 1rem;
     margin-left: 0.1rem;
-    border: solid 0.1rem rgb(197, 197, 197);
     animation-name: slide;
     animation-duration: 0.5s;
+    
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 .sidebar_element {
@@ -64,6 +67,7 @@
     user-select: none;
     margin-bottom: 0.7rem;
     background-color: var(--main-background);
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     width: 100%;
     cursor: grab;
     padding-top: 0.4rem;
