--- a/form-frontend/src/css/formElement.module.css
+++ b/form-frontend/src/css/formElement.module.css
@@ -90,12 +90,16 @@
 
 /*will replace drag text with svg later*/
 .dragDiv {
+    background-image: url("../../public/resources/drag.svg");
     touch-action: none;
     text-align: center;
     cursor: grab;
     user-select: none;
-    height: 2rem;
-    line-height: 1.5rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    background-size: cover;
+    opacity: 70%;
+    margin: 0rem auto;
 }
 
 .formElementTitle {
@@ -122,3 +126,15 @@
 .answerInput{
     height: 2rem;
 }
+
+
+.insertOption{
+    max-width: 8rem;
+    margin-top: 0.5rem;
+    margin-left: 1rem;
+    background-color: var(--highlight-background);
+    border: none;
+    color: white;
+    border-radius: 0.3rem;
+    height: 1.2rem;
+  }
