--- a/form-frontend/src/css/formHead.module.css
+++ b/form-frontend/src/css/formHead.module.css
@@ -6,18 +6,26 @@
     box-shadow: 0 0.1rem 0.2rem rgb(176, 176, 176);
     width: 100%;
     padding-right: 1rem;
+    background-color: var(--highlight-background);
+
 }
 
 .headSelect {
     height: 2.5rem;
     margin: auto 0 auto 0.5rem;
     background: white;
-    border: 2px solid #c4c4c4;
     padding-left: 0.5rem;
     font-size: 1rem;
     margin-right: auto;
     width: 100%;
     max-width: 15rem;
+
+    background: #00c3ff;
+    border: none;
+    color: white;
+    border-radius: 1rem;
+    margin: 0.2rem auto 0.2rem 1rem;
+    font-weight: inherit;
 }
 .headBtnsWrapper{
     display: flex;
@@ -25,6 +33,7 @@
     max-width: 20rem;
 }
 .headButton{
+    color:white;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -38,9 +47,15 @@
 @media (max-width: 550px) {
     .headSelect{
         width: 50%;
-        font-size: small;
+        font-size: 0.7rem;
+        margin-right:0.3rem;
+        margin-top: 0.2rem;
+        margin-left: 0.3rem;
+        padding-left: 0.3rem;
+        height: 2rem;
+
     }
     .headButton{
-        font-size:small;
+        font-size:0.7rem;
     }
 }
