--- a/form-frontend/src/css/globals.css
+++ b/form-frontend/src/css/globals.css
@@ -1,5 +1,6 @@
 :root {
  --main-background: #edf3f4;
+ --highlight-background: #03A9F4;
  --boundmargin: 0.5rem;
  --elementborder: 0.1rem
 }
@@ -21,7 +22,7 @@ html,
 body {
   height: 100%;
   max-width: 100vw;
-  background-color: #edf3f4
+  background-color: #f4f7f7
 }
 /*
 body {
