--- a/form-frontend/src/css/sidebar.module.css
+++ b/form-frontend/src/css/sidebar.module.css
@@ -19,8 +19,10 @@
   text-align: center;
   margin-bottom: 0.5rem;
   height: 2rem;
-  border-bottom: solid 0.1rem rgb(197, 197, 197);
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   padding-top: 0.4rem;
+  background-color: var(--highlight-background);
+  color: white;
 }
 
 #sidebarBody {
@@ -35,7 +37,7 @@
   padding-bottom: 1rem;
   border-radius: 1rem;
   margin-left: 1rem;
-  border: solid 0.1rem rgb(197, 197, 197);
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 .sidebar_element {
@@ -49,6 +51,7 @@
   width: 100%;
   cursor: grab;
   padding-top: 0.4rem;
+  box-shadow: #c3c3c3 0px 1px 4px 0px;
 }
 
 #saveWrapper {
@@ -56,19 +59,23 @@
   background-color: white;
   border-radius: 1rem;
   margin-left: 1rem;
-  border: solid 0.1rem rgb(197, 197, 197);
   display: flex;
   height: 3rem;
   overflow: hidden;
+
+  box-shadow: #c3c3c3 0px 1px 4px 0px;
 }
 
 .sidebarButton {
+
+  background-color: var(--highlight-background);
   flex: 1;
   border: none;
+  color: white;
 }
 
 #saveBtn {
-  border-right: solid 0.1rem rgb(197, 197, 197);
+  border-right: solid 0.1rem rgba(0, 231, 255, 0.2);
 }
 
 #saveBtn:hover,
@@ -88,7 +95,7 @@
   flex-direction: row;
   background-color: white;
   border-radius: 1rem;
-  border: solid 0.1rem rgb(197, 197, 197);
+  box-shadow: #c3c3c3 0px 1px 4px 0px;
   padding: 0.5rem;
   margin-left: 1rem;
   align-content: center;
