--- a/form-frontend/src/css/Head.css
+++ b/form-frontend/src/css/Head.css
@@ -2,7 +2,7 @@
     z-index: 3;
     position: relative;
     width: 100%;
-    
+
 }
 
 .head-button {
@@ -31,12 +31,20 @@
 
 }
 
+#logo_anchor{
+    width: 100%;
+    height: 100%;
+    display: block;
+}
 
 #logo {
     background-image: url("../../public/resources/g2.svg");
-    width: 5rem;
+    width: 7rem;
     height: auto;
     background-size: cover;
+    margin-bottom: 0.5rem;
+    transform: translateX(-0.5rem);
+
 }
 
 
@@ -57,7 +65,8 @@
     border-radius: 100px;
 }*/
 
-#signin-button {    
+#signin-button {
+    margin-left: auto;
     background-color: var(--highlight-background);
     padding: 0 1rem 0 1rem;
     border-radius: 100px;
@@ -88,7 +97,10 @@
     }
 
     #logo {
-        width: 7rem;
+        width: 9rem;
+        transform: translateX(-2rem);
+        margin-bottom: 0.5rem;
+
     }
 
     .head-button {
