--- a/form-frontend/src/css/LoginForm.css
+++ b/form-frontend/src/css/LoginForm.css
@@ -27,7 +27,9 @@
     animation-fill-mode: forwards;
     transform: translateY(-2.5rem);
 }
-
+#signup-form{
+    height: 26rem;
+}
 .user-form{
     display: flex;
     position: relative;
@@ -141,7 +143,10 @@
     border: none;
     cursor: pointer;
 }
-
+#signin-submit:focus, #signin-submit:hover{
+    background-color: rgb(0, 213, 255);
+    
+}
 #signup-prompt{
     margin-top: 1.3rem;
 }
@@ -156,7 +161,7 @@
 
 .invalid-prompt{
     color: red;
-
+    margin: 0 auto;
 }
 
 #login-body{
@@ -164,8 +169,4 @@
     flex-direction: column;
     align-items: center;
     margin: auto;
-}
-
-#input-email{
-    margin-bottom: 2rem;
 }
