--- a/form-frontend/src/css/formHead.module.css
+++ b/form-frontend/src/css/formHead.module.css
@@ -42,6 +42,7 @@
     border:none;  
     height: 100%;
     flex: 1;
+    cursor: pointer;
 }
 
 @media (max-width: 550px) {
@@ -57,5 +58,8 @@
     }
     .headButton{
         font-size:0.7rem;
+    }
+    .formHeadWrapper{
+        height: 2.5rem;
     }
 }
