--- a/form-frontend/src/css/sidebar.module.css
+++ b/form-frontend/src/css/sidebar.module.css
@@ -6,9 +6,6 @@
 
 @media (max-width: 550px) {
   #wrapper {
-    grid-area: f;
-    height: 100%;
-    position: relative;
     display: none;
   }
 
@@ -67,11 +64,24 @@
 }
 
 .sidebarButton {
-
+  cursor: pointer;
   background-color: var(--highlight-background);
-  flex: 1;
+  width: 50%;
+  min-width: 7rem;
   border: none;
   color: white;
+}
+
+
+@media (max-width: 750px) {
+  #saveBtn {
+    width: 60%;
+  }
+  .sidebarButton{
+    
+  min-width: 5rem;
+  font-size: x-small;
+  }
 }
 
 #saveBtn {
@@ -80,7 +90,7 @@
 
 #saveBtn:hover,
 #saveBtn:focus {
-  background-color: rgb(202, 202, 202);
+  background-color: rgb(0, 221, 255)
 }
 
 
@@ -100,8 +110,25 @@
   margin-left: 1rem;
   align-content: center;
 }
+.mobileDisplay{
+  display: none;
+}
+@media (max-width: 550px) {
+.mobileDisplay{
+  display: block;
+  grid-area: l;
+  bottom: 0;
+  position: relative;
+  margin-top: auto;
+  transform: translateY(3rem);
+  max-width: 12rem;
+}
 
+}
 .checkboxLabel {
   margin-left: 0.3rem;
   font-size: large;
+}
+.liveLink{
+  margin-left: 1rem;
 }
