--- a/form-frontend/src/css/LoginForm.module.css
+++ b/form-frontend/src/css/LoginForm.module.css
@@ -1,36 +1,37 @@
-#signin-component{
+.signinComponent {
     width: 100%;
     height: 100%;
     position: fixed;
     z-index: 2;
 }
 
-@keyframes slidein {
+@keyframes slideIn {
     from {transform: translate(0rem, -50rem);}
-    to {transform: translate(0rem,0rem)}
+    to {transform: translate(0rem, 0rem);}
 }
 
 @keyframes transparency {
     from {opacity: 10%;}
-    to {opacity:50%}
+    to {opacity: 50%;}
 }
 
-
-.dark-background{
+.darkBackground {
     z-index: 1;
     width: 100%;
     height: 100%;
     position: absolute;
     background-color: black;
     animation-name: transparency;
-    animation-duration:0.5s;
+    animation-duration: 0.5s;
     animation-fill-mode: forwards;
     transform: translateY(-2.5rem);
 }
-#signup-form{
+
+.signupForm {
     height: 26rem;
 }
-.user-form{
+
+.userForm {
     display: flex;
     position: relative;
     z-index: 1;
@@ -40,18 +41,17 @@
     border-radius: 1rem;
     overflow: hidden;
     padding: 1rem 0.5rem 1rem 0.5rem;
-    margin:6rem auto 0 auto;
-    animation-name: slidein;
+    margin: 6rem auto 0 auto;
+    animation-name: slideIn;
     animation-duration: 0.5s;
 }
 
-#signin-cancel{
+.signinCancel {
     background: none;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
     background-image: url("../../public/resources/cancel.svg");
-    
     position: absolute; 
     width: 1rem;
     height: 1rem;
@@ -62,19 +62,18 @@
     cursor: pointer;
 }
 
-#signin-info{
+.signinInfo {
     width: 15rem;
     font-size: 0.75rem;
     margin-bottom: 1rem;
 }
 
-.container-input{
+.containerInput {
     display: grid;
     margin: 0 0 1rem 0;
 }
 
-
-.signin-inputs{
+.signinInputs {
     background-color: rgb(239, 239, 239);
     width: 15rem;
     height: 2.75rem;
@@ -85,32 +84,27 @@
     grid-column: 1;
 }
 
-
-.container-input:hover .custom-placeholder{
+.containerInput:hover .customPlaceholder {
     font-size: x-small;
     margin-top: 0rem;
 }
 
-.signin-inputs:focus ~ .custom-placeholder{
-    font-size: x-small;
-    margin-top: 0rem;
-
-}
-
-.signin-inputs:valid ~ .custom-placeholder{
-    font-size: x-small;
-    margin-top: 0rem;
-
-}
-
-.signin-inputs::selection .custom-placeholder{
+.signinInputs:focus ~ .customPlaceholder {
     font-size: x-small;
     margin-top: 0rem;
 }
 
+.signinInputs:valid ~ .customPlaceholder {
+    font-size: x-small;
+    margin-top: 0rem;
+}
 
+.signinInputs::selection .customPlaceholder {
+    font-size: x-small;
+    margin-top: 0rem;
+}
 
-.container-custom-placeholder{
+.containerCustomPlaceholder {
     width: 100%;
     height: 100%;
     grid-row: 1;
@@ -118,7 +112,7 @@
     z-index: 1;
 }
 
-.custom-placeholder{
+.customPlaceholder {
     display: inline-block;
     position: absolute;
     color: rgb(183, 183, 183);
@@ -126,14 +120,11 @@
     padding-left: 1rem;
     font-size: medium;
     transition: font-size 0.25s, margin-top 0.25s;
-    font-weight:700    
-
+    font-weight: 700;
 }
 
-
-#signin-submit{
+.signinSubmit {
     font-size: medium;
-
     width: 15rem;
     border-radius: 1.5rem;
     height: 2.5rem;
@@ -143,28 +134,29 @@
     border: none;
     cursor: pointer;
 }
-#signin-submit:focus, #signin-submit:hover{
+
+.signinSubmit:focus, .signinSubmit:hover {
     background-color: rgb(0, 213, 255);
-    
 }
-#signup-prompt{
+
+.signupPrompt {
     margin-top: 1.3rem;
 }
 
-#invalid-prompts-container{
+.invalidPromptsContainer {
     margin-bottom: 1rem;
 }
 
-.invalid-input{
+.invalidInput {
     border: 1.2px solid red;
 }
 
-.invalid-prompt{
+.invalidPrompt {
     color: red;
     margin: 0 auto;
 }
 
-#login-body{
+.loginBody {
     display: flex;
     flex-direction: column;
     align-items: center;
