--- a/form-frontend/src/css/formHead.module.css
+++ b/form-frontend/src/css/formHead.module.css
@@ -1,4 +1,4 @@
-.formHeadWrapper{
+.formHeadWrapper {
     display: flex;
     flex-direction: row;
     align-content: space-between;
@@ -27,39 +27,131 @@
     margin: 0.2rem auto 0.2rem 1rem;
     font-weight: inherit;
 }
-.headBtnsWrapper{
+
+.headBtnsWrapper {
     display: flex;
     width: 100%;
     max-width: 20rem;
 }
-.headButton{
-    color:white;
+
+.headButton {
+    color: white;
     display: flex;
     align-items: center;
     justify-content: center;
     background: none;
-    font-size:medium;
-    border:none;  
+    font-size: medium;
+    border: none;
     height: 100%;
     flex: 1;
     cursor: pointer;
 }
 
 @media (max-width: 550px) {
-    .headSelect{
+    .headSelect {
         width: 50%;
         font-size: 0.7rem;
-        margin-right:0.3rem;
+        margin-right: 0.3rem;
         margin-top: 0.2rem;
         margin-left: 0.3rem;
         padding-left: 0.3rem;
         height: 2rem;
 
     }
-    .headButton{
-        font-size:0.7rem;
+
+    .headButton {
+        font-size: 0.7rem;
     }
-    .formHeadWrapper{
+
+    .formHeadWrapper {
         height: 2.5rem;
     }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes scaleIn {
+    from {
+        transform: scale(0.9);
+    }
+
+    to {
+        transform: scale(1);
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes scaleIn {
+    from {
+        transform: scale(0.9);
+    }
+
+    to {
+        transform: scale(1);
+    }
+}
+
+.popupOverlay {
+    z-index: 10;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: fadeIn 0.3s ease;
+}
+
+.popup {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    animation: scaleIn 0.3s ease;
+}
+
+.popupText{
+    margin: 0 0 1rem 0;
+    font-size: large;
+}
+
+.confirmButton {
+    margin: 0 10px;
+    padding: 10px 20px;
+    background-color:#00c3ff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.cancelButton {
+    margin: 0 10px;
+    padding: 10px 20px;
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
