--- a/form-frontend/src/css/globals.css
+++ b/form-frontend/src/css/globals.css
@@ -4,7 +4,12 @@
  --boundmargin: 0.5rem;
  --elementborder: 0.1rem
 }
-
+#__next {
+  display: flex;
+  flex-grow: 1;
+  margin: 0;
+  padding: 0;
+}
 @media (prefers-color-scheme: dark) {
   :root {
     
@@ -20,9 +25,12 @@
 
 html,
 body {
-  height: 100%;
+  min-height: 100%;
   max-width: 100vw;
-  background-color: #f4f7f7
+  background-color: #f4f7f7;
+  display:flex;
+  flex-grow: 1;
+
 }
 /*
 body {
